Epic Caching Update. Major features (mostly in r2.lib.wrapped)  * Wrapped -> Templated in cases when there is no thing to be wrapped  * cachable templates out of cachable pieces which can be reused  * auto-generation of cache keys for cachable content  * c.render_style used to propagate current style to children  * cut down on the number of c and g variables in thing templates.  * buttons in printable.html now in printablebuttons.html with handler classes in r2.lib.pages.things (planned destination of add_props).

--- a/r2/r2/templates/admintranslations.html
+++ b/r2/r2/templates/admintranslations.html
@@ -21,7 +21,7 @@
 ################################################################################
 
 <%namespace file="translation.html" import="statusbar"/>
-<%namespace file="printable.html" import="ynbutton, state_button" />
+<%namespace file="printablebuttons.html" import="ynbutton, state_button" />
 <%
    from r2.lib.translation import Translator
 %>
