--- a/r2/r2/templates/comment_skeleton.html
+++ b/r2/r2/templates/comment_skeleton.html
@@ -24,9 +24,9 @@
 <%namespace file="utils.html" import="plain_link" />
 
 <%def name="midcol(display=True, cls = '')">
-%if c.profilepage or (not thing._deleted and  (not thing._spam or c.user == thing.author or c.user_is_admin)):
-${parent.midcol(display=display, cls = cls)}
-%endif
+  %if c.profilepage or (not thing._deleted and  (not thing._spam or thing.is_author or c.user_is_admin)):
+    ${parent.midcol(display=display, cls = cls)}
+  %endif
 </%def>
 
 <%def name="tagline(collapse=False)">
@@ -37,7 +37,7 @@ ${self.tagline(True)}
 </%def>
 
 <%def name="commentBody()">
-  ${thing.usertext.render(style="html")}
+  ${thing.usertext}
 </%def>
 
 
@@ -55,8 +55,4 @@ ${self.tagline(True)}
     ${self.buttons()}
   </ul>
 </div>
-</%def>
-
-<%def name="bylink_button(title, link)">
- ${plain_link(title, link, _class="bylink", rel="nofollow")}
 </%def>
