--- a/r2/r2/templates/commentspanel.html
+++ b/r2/r2/templates/commentspanel.html
@@ -20,7 +20,7 @@
 ## CondeNet, Inc. All Rights Reserved.
 ################################################################################
 
-<%namespace file="printable.html" import="toggleable_label"/>
+<%namespace file="printablebuttons.html" import="toggleable_label"/>
 
 <div class="comments-panel">
 
@@ -42,6 +42,6 @@
                      reverse = not c.user.pref_frame_commentspanel)}
 </div>
 
-${thing.listing.render()}
+${thing.listing}
 
 </div>
