--- a/r2/r2/templates/linkinfobar.html
+++ b/r2/r2/templates/linkinfobar.html
@@ -19,7 +19,8 @@
 ## All portions of the code written by CondeNet are Copyright (c) 2006-2009
 ## CondeNet, Inc. All Rights Reserved.
 ################################################################################
-<%namespace file="printable.html" import="state_button, thing_css_class" />
+<%namespace file="printablebuttons.html" import="state_button" />
+<%namespace file="printable.html" import="thing_css_class" />
 
 <div class="raisedbox linkinfo">
   <table class="details">
