--- a/r2/r2/templates/menuarea.html
+++ b/r2/r2/templates/menuarea.html
@@ -23,7 +23,7 @@
 <div class="menuarea">
   %for menu in thing.menus:
     <div class="spacer">
-      ${menu.render()}
+      ${menu}
     </div>
   %endfor
 </div>
