--- a/r2/r2/templates/profilebar.html
+++ b/r2/r2/templates/profilebar.html
@@ -25,7 +25,7 @@
    from r2.lib.utils import timesince
  %>
 <%namespace file="utils.html" import="submit_form, plain_link"/>
-<%namespace file="printable.html" import="toggle_button"/>
+<%namespace file="printablebuttons.html" import="toggle_button"/>
 <% user = thing.user %>
 %if thing.user:
 <div class="raisedbox">
