--- a/r2/r2/templates/promotelinkform.html
+++ b/r2/r2/templates/promotelinkform.html
@@ -24,7 +24,7 @@
   from r2.lib.media import thumbnail_url
 %>
 <%namespace file="utils.html" import="error_field, checkbox, plain_link, image_upload" />
-<%namespace file="printable.html" import="ynbutton"/>
+<%namespace file="printablebuttons.html" import="ynbutton"/>
 <%namespace file="utils.html" import="error_field, checkbox, image_upload" />
 
 %if thing.link:
