--- a/r2/r2/templates/redditmin.html
+++ b/r2/r2/templates/redditmin.html
@@ -25,7 +25,7 @@
   <body onclick="close_menus()" class="min-body">
     %if thing.content:
       <div class="content">
-        ${thing.content().render()}
+        ${thing.content()}
       </div>
     %endif
   </body>
