--- a/r2/r2/templates/searchbar.html
+++ b/r2/r2/templates/searchbar.html
@@ -30,7 +30,7 @@
   <h4 style="color:gray">${thing.header}</h4>
   
   <div id="previoussearch">
-    ${SearchForm(prev_search = thing.prev_search).render()}
+    ${SearchForm(prev_search = thing.prev_search)}
   </div>
   
   %if thing.prev_search:
