--- a/r2/r2/templates/userlist.html
+++ b/r2/r2/templates/userlist.html
@@ -43,7 +43,7 @@
   <table>
     %if thing.users:
       %for item in thing.users:
-        ${item.render()}
+        ${item}
       %endfor
     %else:
       <tr><td></td></tr>
