--- a/r2/r2/templates/clickgadget.html
+++ b/r2/r2/templates/clickgadget.html
@@ -19,14 +19,14 @@
 ## All portions of the code written by CondeNet are Copyright (c) 2006-2009
 ## CondeNet, Inc. All Rights Reserved.
 ################################################################################
-<%namespace file="printable.html" import="simple_button" />
+<%namespace file="printablebuttons.html" import="simple_button" />
 
 %if c.user.pref_clickgadget:
 <div class="gadget" style="${'display: none' if not thing.content else ''}">
   <h2>${_("Recently viewed links")}</h2>
 
   <div class="click-gadget">
-    ${thing.content}
+    ${unsafe(thing.content)}
   </div>
 
   <div class="right">
