--- a/r2/r2/templates/comment.xml
+++ b/r2/r2/templates/comment.xml
@@ -41,4 +41,4 @@
   <description>${body|h}</description>
 </item>
 
-${hasattr(thing, "child") and thing.child.render() or ''}
+${hasattr(thing, "child") and thing.child or ''}
