--- a/r2/r2/templates/link.xml
+++ b/r2/r2/templates/link.xml
@@ -26,7 +26,6 @@
    from r2.models import FakeSubreddit
 %>
 <% 
-   com_label = ungettext("comment", "comments", thing.num_comments)
    url = add_sr(thing.permalink, force_hostname = True)
    use_thumbs = thing.thumbnail and not request.GET.has_key("nothumbs")
  %>
@@ -37,24 +36,31 @@
   <pubDate>${thing._date.strftime('%a, %d %b %Y %H:%M:%S %z')}</pubDate>
   <dc:date>${thing._date.isoformat()}</dc:date>
   <description>
-    %if use_thumbs:
-      &lt;table&gt;
-        &lt;tr&gt;&lt;td&gt;
-          &lt;a href="${url}"&gt;&lt;img src="${thing.thumbnail}" alt="${thing.title}" title="${thing.title}" /&gt;&lt;/a&gt;
-        &lt;/td&gt;&lt;td&gt;
-    %endif
-    <% domain = get_domain(cname = c.cname, subreddit = False) %>
-    submitted by &lt;a href="http://${domain}/user/${thing.author.name}"&gt;${thing.author.name}&lt;/a&gt;
-     %if isinstance(c.site, FakeSubreddit):
-      to &lt;a href="http://${domain}${thing.subreddit.path}"&gt;
-       ${thing.subreddit.name}&lt;/a&gt; 
-    %endif
-    &lt;br/&gt;
-    &lt;a href="${thing.url}"&gt;[link]&lt;/a&gt;
-    &lt;a href="${url}"&gt;[${thing.num_comments} ${com_label}]&lt;/a&gt;
-    %if use_thumbs:
-      &lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;
-    %endif
+    <%def name="description()" filter="h">
+      %if use_thumbs:
+        <table>
+          <tr><td>
+            <a href="${url}"><img src="${thing.thumbnail}" alt="${thing.title}" title="${thing.title}" /></a>
+          </td><td>
+      %endif
+      <% 
+         domain = get_domain(cname = c.cname, subreddit = False) 
+       %>
+      submitted by <a href="http://${domain}/user/${thing.author.name}">
+         ${thing.author.name}
+      </a>
+       %if thing.different_sr:
+        to <a href="http://${domain}${thing.subreddit.path}">
+         ${thing.subreddit.name}</a> 
+      %endif
+      <br/>
+      <a href="${thing.url}">[link]</a>
+      <a href="${url}">[${thing.comment_label}]</a>
+      %if use_thumbs:
+        </td></tr></table>
+      %endif
+    </%def>
+  ${description()}
   </description>
   %if use_thumbs:
     <media:title>${thing.title}</media:title>
