--- a/r2/r2/templates/linkpromoteinfobar.html
+++ b/r2/r2/templates/linkpromoteinfobar.html
@@ -22,7 +22,7 @@
 <%!
    from datetime import datetime
 %>
-<%namespace file="printable.html" import="ynbutton" />
+<%namespace file="printablebuttons.html" import="ynbutton" />
 <%namespace file="utils.html" import="plain_link" />
 
 %if thing.a.promoted:
