--- a/r2/r2/templates/messagecompose.html
+++ b/r2/r2/templates/messagecompose.html
@@ -51,14 +51,12 @@
 
 <div class="spacer">
   <%utils:round_field title="${_('message')}">
-    ${UserText(None, have_form = False, creating = True).render()}
+    ${UserText(None, have_form = False, creating = True)}
   </%utils:round_field>
 </div>  
 
 <div class="spacer">
-  %if thing.captcha:
-    ${thing.captcha.render()}
-  %endif
+  ${thing.captcha}
 </div>  
 
 <button id="send" name="send" type="submit">${_("send")}</button>
