--- a/r2/r2/templates/newlink.html
+++ b/r2/r2/templates/newlink.html
@@ -36,7 +36,7 @@
                     _class="submit content",
                     _id="newlink">
 
-${thing.formtabs_menu.render()}
+${thing.formtabs_menu}
 <div class="formtabs-content">
 
 <div class="spacer">
@@ -69,7 +69,7 @@ ${thing.formtabs_menu.render()}
 <div class="spacer">
   <%utils:round_field title="${_('text')}", description="${_('(optional)')}" id="text-field">
     <input name="kind" value="self" type="hidden"/>
-    ${UserText(None, have_form = False, creating = True).render()}
+    ${UserText(None, have_form = False, creating = True)}
   </%utils:round_field>
 </div>
 
@@ -108,9 +108,7 @@ ${thing.formtabs_menu.render()}
   </%utils:round_field>
 </div>
 
-%if thing.captcha:
-  ${thing.captcha.render()}
-%endif
+${thing.captcha}
     
 </div>
 
@@ -126,5 +124,5 @@ ${thing.formtabs_menu.render()}
   if(form.length) {
     var default_menu = form.find(".${thing.default_tab}:first");
     select_form_tab(default_menu, "${thing.default_show}", "${thing.default_hide}");
-  }
+    }
 </script>
