--- a/r2/r2/templates/promotedlinks.html
+++ b/r2/r2/templates/promotedlinks.html
@@ -23,7 +23,7 @@
   from r2.lib.utils import to36
 %>
 <%namespace file="utils.html" import="plain_link"/>
-<%namespace file="printable.html" import="ynbutton"/>
+<%namespace file="printablebuttons.html" import="ynbutton"/>
 
 
 <div>
