--- a/r2/r2/templates/subredditstylesheet.html
+++ b/r2/r2/templates/subredditstylesheet.html
@@ -25,7 +25,7 @@
 
 %>
 <%namespace file="utils.html" import="error_field, image_upload"/>
-<%namespace file="printable.html" import="ynbutton, toggle_button"/>
+<%namespace file="printablebuttons.html" import="ynbutton, toggle_button"/>
 
 <div class="stylesheet-customize-container">
   <form
