--- a/r2/r2/templates/usertableitem.html
+++ b/r2/r2/templates/usertableitem.html
@@ -20,7 +20,7 @@
 ## CondeNet, Inc. All Rights Reserved.
 ################################################################################
 
-<%namespace file="printable.html" import="ynbutton" />
+<%namespace file="printablebuttons.html" import="ynbutton" />
 <%namespace file="utils.html" import="plain_link"/>
 
 <tr>
