--- a/r2/r2/templates/usertext.html
+++ b/r2/r2/templates/usertext.html
@@ -24,7 +24,7 @@
    from r2.lib.utils import randstr
 %>
 
-<%namespace file="printable.html" import="toggle_button" />
+<%namespace file="printablebuttons.html" import="toggle_button" />
 <%namespace file="utils.html" import="error_field"/>
 
 <%def name="action_button(name, btn_type, onclick, display)">
@@ -38,14 +38,13 @@
   <form action="#" class="${thing.css_class}"
         onsubmit="return post_form(this, '${thing.post_form}')"
         ${"style='display:none'" if not thing.display else ""}
-        id="form-${(thing.item._fullname if thing.item else "") + randstr(3)}">
+        id="form-${thing.fullname + randstr(3)}">
 %else:
   <div class="${thing.css_class}">
 %endif
 
   ##this is set for both editting selftext and creating new comments
-  <input type="hidden" name="thing_id"
-         value="${thing.item and thing.item._fullname or ''}"/>
+  <input type="hidden" name="thing_id" value="${thing.fullname}"/>
 
   %if not thing.creating:
     <div class="usertext-body">
